--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.8"
 
 services:
   app:
-    container_name: lvd-voucher-frontend
-    image: lvd-voucher-frontend
+    container_name: unfi-voucher-frontend
+    image: unifi-voucher-frontend
     # enviroment variables dont actually do anything, u have to define them in .env
     # But you'll probably need them when using docker
     environment:
