Removed last LvD Brandings

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LvD Vouchers",
-  "name": "Lvd Wifi Voucher System",
+  "short_name": "UniFi Vouchers",
+  "name": "UniFi Voucher System",
   "icons": [
     {
       "src": "favicon.ico",
