Added Volumes do docker-compose

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,7 @@ FROM node:16-alpine AS backend
 WORKDIR /app/backend
 
 # Install app dependencies
+COPY start.sh .
 COPY package.json .
 COPY package-lock.json .
 RUN npm ci --only=production
