--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,20 @@
 FROM node:16-alpine AS builder
+
+#Load Variables from Build Arguments
+ARG REACT_APP_BACKEND_PORT
+ARG REACT_APP_BACKEND_URL
+ARG REACT_APP_SYSTEM_NAME
+ARG REACT_APP_GENERAL_ERROR_MESSAGE
+ARG REACT_APP_NOT_FOUND_ERROR_MESSAGE
+
+#Set Enviroment Variables
 ENV NODE_ENV production
+
+ENV REACT_APP_BACKEND_PORT $REACT_APP_BACKEND_PORT
+ENV REACT_APP_BACKEND_URL $REACT_APP_BACKEND_URL
+ENV REACT_APP_SYSTEM_NAME $REACT_APP_SYSTEM_NAME
+ENV REACT_APP_GENERAL_ERROR_MESSAGE $REACT_APP_GENERAL_ERROR_MESSAGE
+ENV REACT_APP_NOT_FOUND_ERROR_MESSAGE $REACT_APP_NOT_FOUND_ERROR_MESSAGE
 
 # Add a work directory
 WORKDIR /app/frontend
